<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/commonDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/select_date"
        android:autofillHints="false"
        android:layout_gravity="center"
        android:inputType="date"
        android:padding="10dp"
        android:focusable="false"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/idBtnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/amra_flower"
        android:padding="16dp"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/tutDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:autofillHints="false"
        android:gravity="center"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/tut_date"
        android:textIsSelectable="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/calculate_chiliads"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chiliadDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/chiliad_date"
            android:inputType="date"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:text="@string/plus" />

        <NumberPicker
            android:id="@+id/chiliadUpDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/equals" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/chiliadsInCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:padding="10dp"
                android:hint="@string/chiliad_common_format"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chiliadsInTUT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:hint="@string/chiliad_tut_format"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>